--- a/router-example-project/src/index.css
+++ b/router-example-project/src/index.css
@@ -138,3 +138,18 @@ form button{
     margin-top: 20px;
 }
 
+.delete-btn {
+  background-color: #ff4444;
+  border: 0;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 4px;
+    color: #fff;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.delete-btn:hover {
+  background-color: #cc0000;
+}
+
